--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@envelop/sentry": "^5.1.1",
     "@redwoodjs/api": "4.2.2",
-    "@redwoodjs/graphql-server": "4.2.2"
+    "@redwoodjs/graphql-server": "4.2.2",
+    "@sentry/node": "^7.41.0",
+    "@sentry/tracing": "^7.41.0"
   }
 }
