--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,8 @@
     "@redwoodjs/forms": "4.2.2",
     "@redwoodjs/router": "4.2.2",
     "@redwoodjs/web": "4.2.2",
+    "@sentry/react": "^7.41.0",
+    "@sentry/tracing": "^7.41.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
