setup dbAuth and TailwindCSS

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,7 +6,9 @@
     "mgmcdermott.vscode-language-babel",
     "editorconfig.editorconfig",
     "prisma.prisma",
-    "graphql.vscode-graphql"
+    "graphql.vscode-graphql",
+    "csstools.postcss",
+    "bradlc.vscode-tailwindcss"
   ],
   "unwantedRecommendations": []
 }
