--- a/web/package.json
+++ b/web/package.json
@@ -13,13 +13,20 @@
     ]
   },
   "dependencies": {
-    "@redwoodjs/forms": "4.2.2",
-    "@redwoodjs/router": "4.2.2",
-    "@redwoodjs/web": "4.2.2",
+    "@redwoodjs/auth-dbauth-web": "4.3.0",
+    "@redwoodjs/forms": "4.3.0",
+    "@redwoodjs/router": "4.3.0",
+    "@redwoodjs/web": "4.3.0",
     "@sentry/react": "^7.41.0",
     "@sentry/tracing": "^7.41.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "tailwindcss": "^3.2.7"
   }
 }
