--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "4.2.2"
+    "@redwoodjs/core": "4.3.0",
+    "prettier-plugin-tailwindcss": "^0.2.4"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
