--- a/redwood.toml
+++ b/redwood.toml
@@ -7,5 +7,8 @@
   port = 8911
 [browser]
   open = true
+[generate]
+  stories = false
+  tests = false
 [notifications]
   versionUpdates = ["latest"]
